# avalon

./: .env  LakeFSQuickStart.sh  README.md  docker-compose.test.yaml  requirements.txt  setup.cfg
src/: config.py  server.py
src/avalon/: config.py  main.py  mainoperations.py  server.py
src/avalon/models/: pipeline.py
src/avalon/operations/: LakeFsWrapper.py  files.py
src/avalon/utils/: shared.py
src/models/: pipeline.py
src/operations/: LakeFsWrapper.py
tst/data/test1/: file1.txt
tst/data/test2/: file1.txt
tst/data/test2/dir1/: file2.txt  file3.txt
tst/data/test3/: file1.txt
tst/data/test3/dir1/: file2.txt  file3.txt  file4.txt
tst/data/test4/: file1.txt
tst/operations/: LakeFsWrapperTests.py  mainoperationsTests.py
