[metadata]
name = Avalon
version = attr: avalon.__version__
author = Renaissance Computing Institute
author_email = kebedey@renci.org
description = Lakefs backed dataset management tool.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/helxplatform/lakefs-data-machine
project_urls =
    Bug Tracker = https://github.com/helxplatform/lakefs-data-machine/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
include_package_data = true
install_requires =
    lakefs_client==0.107.0
    pydantic==2.4.2
    pyyaml
    httpx
    boto3

[options.entry_points]
console_scripts =
    avalon = avalon.main:cli

[options.packages.find]
where = src
